fixed bug #910 (right type of ifnull function)

mysql-test/r/create.result:
  added test for bug #910 (right type of ifnull function)
mysql-test/t/create.test:
  added test for bug #910 (right type of ifnull function)
sql/field.h:
  added new constructors of Field_decimal, Field_tiny, Field_short, Field_float,
  Field_null, Field_year
  for using in Item::tmp_table_field_from_field_type
sql/item.cc:
  added Item::tmp_table_field_from_field_type
sql/item.h:
  added Item::tmp_table_field_from_field_type